fix(color): wrong background color

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -7,7 +7,7 @@
 
         color-scheme: light dark;
         color: var(--gray-12);
-        background: var(--gray-3);
+        background: var(--gray-2);
         accent-color: var(--brand-9);
 
         font-synthesis: none;
